--- a/sentencing-eda.Rmd
+++ b/sentencing-eda.Rmd
@@ -56,7 +56,7 @@ A key motivation for this work is exploring how our personal and racial identiti
 
 In this dataset, we have four variables that are related to identity: `age`, `sex`, `educ`: education, and `race`. It is important to note that these characteristics are not independent of one another but can intersect and interact with one another. This combined effect is known as intersectionality. The Center for Intersectional Justice describes the concept of intersectionality as: "the ways in which systems of inequality based on gender, race, ethnicity, sexual orientation, gender identity, disability, class and other forms of discrimination “intersect” to create unique dynamics and effects" (Ref: [Center for Intersectional Justice](https://www.intersectionaljustice.org/what-is-intersectionality), July 20, 2023).
 
-#### Sex 
+#### Sex
 
 Sex has been coded as a binary variable 0 and 1, where 0 is "Male" and 1 is "Female".
 
@@ -84,7 +84,7 @@ us_sent %>%
   ggplot() +
   geom_bar(aes(x = sex, fill = sex)) +
   labs(x = "Sex*",
-       title = "Sex* of Sentenced Individuals", 
+       title = "Sex* of Sentenced Individuals",
        y = "Number of Individuals",
        fill = "Sex*") +
   scale_fill_viridis_d()
@@ -105,7 +105,7 @@ us_sent %>%
   ggplot() +
   geom_bar(aes(x = fct_infreq(race), fill = race)) +
   labs(x = "Race*",
-       title = "Race* of Sentenced Individuals", 
+       title = "Race* of Sentenced Individuals",
        y = "Number of Individuals",
        fill = "Race*") +
   scale_fill_viridis_d()
@@ -130,7 +130,7 @@ us_sent %>%
   ggplot() +
   geom_bar(aes(x = fct_infreq(race), fill = sex)) +
   labs(x = "Race*",
-       title = "Race* and Sex* of Sentenced Individuals", 
+       title = "Race* and Sex* of Sentenced Individuals",
        y = "Number of Individuals",
        fill = "Sex*")  +
   scale_fill_viridis_d()
@@ -148,7 +148,7 @@ us_sent %>%
   ggplot() +
   geom_bar(aes(x = fct_infreq(race), fill = sex), position = "fill") +
   labs(x = "Race*",
-       title = "Race* and Sex* of Sentenced Individuals", 
+       title = "Race* and Sex* of Sentenced Individuals",
        y = "Number of Individuals",
        fill = "Sex*")  +
   scale_fill_viridis_d()
@@ -163,9 +163,9 @@ us_sent %>%
 ```
 
 
-**To add**: 
+**To add**:
 - what do we divide by?
-- You may look at this plot and say that whites are sentenced at the federal district court more than black individuals. This is where it is important to look at the population in each district. 
+- You may look at this plot and say that whites are sentenced at the federal district court more than black individuals. This is where it is important to look at the population in each district.
 
 
 **Future Directions**
@@ -176,7 +176,7 @@ Bringing in the spatial district files
 - Downloading census data from the API.
 - Joining to census data
 - Limitations of census data
-- Other potential things to mention (the affect of aggregation and spatial scale). 
+- Other potential things to mention (the affect of aggregation and spatial scale).
 
 
 ### What
@@ -197,8 +197,8 @@ ggplot(us_sent) +
   geom_vline(aes(xintercept = 60), color = "red", linetype = 2) +
    geom_vline(aes(xintercept = 120), color = "red", linetype = 2) +
   geom_vline(aes(xintercept = 240), color = "red", linetype = 2)
-  
- 
+
+
 
 ```
 
@@ -213,8 +213,8 @@ ggplot(us_sent) +
   geom_vline(aes(xintercept = 10), color = "red", linetype = 2) +
   geom_vline(aes(xintercept = 20), color = "red", linetype = 2) +
   labs(title = "Distribution of number of individuals by ")
-  
- 
+
+
 
 ```
 
@@ -236,13 +236,13 @@ ggplot(us_sent) +
 
 ```{r}
 ggplot(us_sent) +
-  geom_density_ridges(aes(y = as.factor(criminal_history), 
-                          x = sentence_length, 
+  geom_density_ridges(aes(y = as.factor(criminal_history),
+                          x = sentence_length,
                           fill = as.factor(criminal_history))) +
   labs(title = "Distribution of sentence length in months by criminal history",
        subtitle = "Black dashed lines indicate 1, 5, 10, 15, and 20 year sentences",
-    fill = "Criminal History", 
-       x = "Sentence length in months", 
+    fill = "Criminal History",
+       x = "Sentence length in months",
        y = "Criminal History") +
   geom_vline(aes(xintercept = 12), color = "black", linetype = 2) +
   geom_vline(aes(xintercept = 60), color = "black", linetype = 2) +
@@ -250,16 +250,16 @@ ggplot(us_sent) +
   geom_vline(aes(xintercept = 180), color = "black", linetype = 2) +
   geom_vline(aes(xintercept = 240), color = "black", linetype = 2) +
   scale_fill_viridis_d()
-  
+
 ```
 What is the relationship between `all_adjustments` and `sentence_length`?
 
 ```{r}
 ggplot(us_sent) +
-  geom_point(aes(y = sentence_length, 
+  geom_point(aes(y = sentence_length,
                  x = all_adjustments, color = as.factor(criminal_history)), alpha = 0.01) +
-  labs(x = "All Adjustments", 
-       y = "Sentence length in months", 
+  labs(x = "All Adjustments",
+       y = "Sentence length in months",
        color = "Criminal History") +
   facet_wrap(~ race) +
   scale_color_viridis_d()
@@ -267,10 +267,10 @@ ggplot(us_sent) +
 
 ```{r}
 ggplot(us_sent) +
-  geom_point(aes(y = sentence_length, 
+  geom_point(aes(y = sentence_length,
                  x = all_adjustments, color = as.factor(criminal_history)), alpha = 0.01) +
-  labs(x = "All Adjustments", 
-       y = "Sentence length in months", 
+  labs(x = "All Adjustments",
+       y = "Sentence length in months",
        color = "Criminal History") +
   scale_color_viridis_d()
 ```
@@ -279,15 +279,66 @@ ggplot(us_sent) +
 
 ```{r}
 ggplot(us_sent) +
-  geom_density_ridges(aes(y = as.factor(criminal_history), 
-                          x = age, 
+  geom_density_ridges(aes(y = as.factor(criminal_history),
+                          x = age,
                           fill = as.factor(criminal_history))) +
-  labs(fill = "Criminal History", 
-       x = "Age of individual in years", 
+  labs(fill = "Criminal History",
+       x = "Age of individual in years",
        y = "Criminal History")
 ```
 
 ### When
+
+Let's explore the time data found in our US sentencing data set. How many columns of data did we have again? This seems like a good place to start digging into what kind of time data we have in this data set. Which tool can we use to find out?
+
+
+Do we remember?
+
+
+We do remember; we can use the names() routine to remind ourselves.
+
+
+```{r check the columns, i.e. names}
+names(us_sent)
+```
+We can see the fifteen column names in that output.  Awesome.  Looks like our time data, as far as 'when' these convicted individuals in our data were convited, is in the 'year' column.  Let's see what we're working with here.  Let's use the pipe distinct() routine again.
+
+```{r Segregate and list the data in the column year}
+us_sent %>% distinct(year)
+```
+
+Excellent.  So we have years from 2006 from 2020 in our data, 15 rows worth of data.  It is worth noticing that although 2020-2006 = 14, when we cound each year as a whole year of data 'inclusively', we have 15 distinct instances, which the distinct command helpfully listed out for us.
+
+Now each of these data points is a numeric variable, such as '2010', or '2015'. One way we could check is to use the 'sapply()' routine.
+
+
+```{r use sapply() to verify the year data is indeed numero}
+sapply(us_sent,is.numeric)
+```
+
+In the output we can indeed see `TRUE' for the column 'year'.  As we progress in our educational journey, learn about different numeric variables, including double precision floating point arithmetic numeric variables.  Is our 'year' data in this format?  Let's use the same command with a different argument:
+
+
+```{r use sapply() to verify the year data is indeed numero}
+sapply(us_sent,is.double)
+```
+
+Nice, we can see that our 'year' data is indeed a double precision floating point number.
+
+
+Let's do a graph of our 'year' data, where we have each year on the vertical (y) axis and the sentences on the horizonal (x) axis.  
+
+```{r Bar chart of year data}
+ggplot(us_sent) +
+  geom_bar(aes(y = year))
+```
+
+
+
+If we wanted to use a scatter plot, which could be a bit 'messier', one way to do so would be:
+```{r graph our year data- scatter plot}
+ggplot(us_sent, aes(x=sentence_length, y=year)) + geom_point()
+```
 
 ### Where
 
@@ -299,18 +350,18 @@ us_sent %>%
 ```
 You'll notice that certain states are a single district on their own. Other larger states are split into several districts (e.g. New York East, New York North).  
 
-Q: If you live in the United States, can you identify which district you live in? 
+Q: If you live in the United States, can you identify which district you live in?
 
-**To Do** Add a link to a reference where someone could also find which district their town/city is in. 
+**To Do** Add a link to a reference where someone could also find which district their town/city is in.
 
-We can use `distinct` to figure out what distinct districts we have in our dataset, but we are also interested in finding out how many sentences were made in each district and we will want to think about this question in relation to the population of those districts, which can be quite nuanced and we will come back to this later. 
+We can use `distinct` to figure out what distinct districts we have in our dataset, but we are also interested in finding out how many sentences were made in each district and we will want to think about this question in relation to the population of those districts, which can be quite nuanced and we will come back to this later.
 
 Our goals in this next section are to think about ways we can explore the question "Where did those sentences occur" in a visual way.
 
 **Learning aims**
 
 - introduce factors as a data type
-- explain why it might be better to put our names on the y axis instead of the x-axis for many categories and those with longer names. This makes it more readable. 
+- explain why it might be better to put our names on the y axis instead of the x-axis for many categories and those with longer names. This makes it more readable.
 - explain that automatically categorical data will be placed in alphabetical order.
 - we can reconfigure the graph using functions from the `forcats` package.
 - This is a good example for when you might want to order it in terms of frequency (i.e. the count) using `fct_infreq`
@@ -378,7 +429,7 @@ ggplot(us_sent) +
 
 **To Do**:
 
-- If we want to get out the district populations, we will probably need to download the data by the county level. 
+- If we want to get out the district populations, we will probably need to download the data by the county level.
 - Decision points: we could download the data in categories by age and sex and race: e.g. 5-9, 10-14 etc. This might get a little
 
 ```{r census-data-import, echo = TRUE, warning = FALSE, message = FALSE, results = 'hide'}
@@ -386,7 +437,7 @@ ggplot(us_sent) +
 # apply unique census api key
 census_api_key("5177724b01a7fe4714097e711cb95230c37cfce7", overwrite = TRUE)
 
-# import census data 
+# import census data
 ## guide to spatial units: https://api.census.gov/data/2016/acs/acs5/geography.html
 ## variable of interest --> population
 ## vars <- load_variables(year = 2013,
